Fix grid layout issue when switching to the control panel

--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ body {
     body {
         display: grid;
         grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: 1fr auto 1fr;
+        grid-template-rows: 1fr repeat(10, 1fr) 1fr;
     }
 
     header {
@@ -197,14 +197,14 @@ body {
     }
 
     main {
-        grid-row: 2 / 3;
+        grid-row: 2 / 13;
         grid-column: 1 / 11;
         padding-inline: 2rem;
     }
 
     footer {
         height: 100%;
-        grid-row: 1 / 3;
+        grid-row: 1 / 13;
         grid-column: 11 / 13;
     }
 }
